--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
   "name": "socialmedia",
   "version": "1.0.0",
-  "description": "socialmedia - Profesyonel Sosyal Medya Hizmetleri",
-  "main": "server.js",
+  "private": true,
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "keywords": ["smm", "social-media", "marketing"],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "axios": "^1.6.2",
-    "dotenv": "^16.3.1",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5"
+    "next": "14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "lucide-react": "^0.294.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3"
   }
 }
